# llama-stack-examples

./: .gitignore  README.md  pyproject.toml  run.yaml
crewai/: README.md
crewai/src/: client.py
responses/: README.md
responses/src/: custom_tools.py  include.py  max_tool_calls.py  reasoning_chat_completions.py  reasoning_responses.py
safety/: README.md  ai_safety.md
safety/src/: agent.py  moderations.py  safety_api.py
